--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -59,6 +59,12 @@ jobs:
           # By default, queries listed here will override any specified in a config file.
           # Prefix the list here with "+" to use these queries and those in the config file.
 
+      - name: Install build-dependencies
+        uses: awalsh128/cache-apt-pkgs-action@1.3.0 # v1.3.0
+        with:
+          packages: cmake g++ build-essential libboost-program-options1.74-dev libpng++-dev zlib1g-dev
+          version: 1.0
+
       # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
       # If this step fails, then you should remove it and run the build manually (see below)
       # - name: Autobuild
@@ -69,7 +75,6 @@ jobs:
 
       #   If the Autobuild fails above, remove it and uncomment the following three lines.
       #   modify them (or add more) to build your code if your project, please refer to the EXAMPLE below for guidance.
-
       - run: |
           echo "Run, Build Application using script"
           ./buildscript.sh
