--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -76,7 +76,7 @@ jobs:
       #   modify them (or add more) to build your code if your project, please refer to the EXAMPLE below for guidance.
       - run: |
           echo "Run, Build Application using script"
-          ./buildscript.sh -i
+          ./buildscript.sh --no-install
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@04daf014b50eaf774287bf3f0f1869d4b4c4b913 # v2.21.7
