--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,7 @@ updates:
     labels:
       - "dependencies"
       - "automerge"
-      - "github-actions"
+      - "github_actions"
   - package-ecosystem: "docker"
     directory: "/"
     schedule:
